@@ -1,6 +1,14 @@
 2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/playlist-treeview.c:
+	* src/av-cp/playlist-treeview.h:
+	* src/av-cp/renderer-controls.c:
+
+	Implement next/prev controls (locally).
+
+2008-01-26  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/playlist-treeview.c:
 
 	- Item selection sets the URI on the renderer if it's in
 	  PLAYING/PAUSE state.
